projects/vb6parse/snapshots/syntax/library/statements/savesetting/savesetting_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/savesetting.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SaveSettingStatement
      children:
        - kind: SaveSettingKeyword
          text: SaveSetting
        - kind: Whitespace
          text: "   "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"App\""
            - kind: Whitespace
              text: "  "
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: "  "
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Sec\""
            - kind: Whitespace
              text: "  "
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: "  "
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Key\""
            - kind: Whitespace
              text: "  "
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: "  "
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Val\""
    - kind: Newline
      text: "\n"
